# KlipMapper

./: .gitignore  .pre-commit-config.yaml  ADDITIONAL_FILES_ANALYSIS.md  AGENTMAP_REFACTOR_ROADMAP.md  AGENTS.md  CHANGELOG.md  Cargo.toml  ENHANCEMENT_SUGGESTIONS.md  INTEGRATION_TASK_PLAN.md  NEW_BUILD.md  QUERY_COMMAND_IMPLEMENTATION_PLAN.md  README.md  REF.md  SYMBOL_RESOLUTION_REFERENCE.md  TASK_TRACKING.json  TEST_TRACKING.md  debug_treesitter.rs  demo_env_profile.py  demo_glob.py  demo_validation.py  pos_architecture.json  pos_updated_deps_test.json  test_decompress.py  test_sample.dart  test_treesitter.rs  test_validation.rs  updates.md
.agentmap/: config.example.yaml  config.yaml
.agentmap/examples/dart/: flutter_sample.yaml
.agentmap/examples/dart/pos/: AGENTS.yaml  CLAUDE.yaml  DATABASE_SCHEMA.yaml  DEPLOYMENT_GUIDE.yaml  analysis.yaml  analysis_options.yaml  build_release.yaml  build_simple.yaml  checkout_implementation.yaml  create_portable.yaml  deploy.yaml  devtools_options.yaml  enhancements.yaml  error2.yaml  fixes.yaml  flutter.yaml  (+16 more)
.agentmap/examples/go/: sample.yaml
.agentmap/examples/java/: sample.yaml
.agentmap/examples/python/: sample.yaml
.agentmap/examples/rust/: sample.yaml
.agentmap/examples/ts/: sample.yaml
.cargo/: config.toml
agentmap-v2/: Cargo.toml  README.md
agentmap-v2/examples/: oauth_embedding_test.rs
agentmap-v2/queries/: dart_imports.scm  go.scm  rust.scm  typescript.scm
agentmap-v2/queries/dart/: defs.scm  imports.scm  uses.scm
agentmap-v2/queries/python/: imports.scm  uses.scm
agentmap-v2/queries/rust/: defs.scm  uses.scm
agentmap-v2/src/: config.rs  lib.rs
agentmap-v2/src/adapters/: dart.rs
agentmap-v2/src/analyzer/: calls.rs  imports.rs  inheritance.rs  mod.rs  pipeline.rs  usage.rs
agentmap-v2/src/anchor/: builder.rs  compress.rs  mod.rs  types.rs
agentmap-v2/src/architecture/: exporter.rs  mod.rs  types.rs
agentmap-v2/src/checker/: mod.rs  types.rs  validator.rs
agentmap-v2/src/core/: analysis.rs  error.rs  location.rs  mod.rs  relationship.rs  symbol.rs
agentmap-v2/src/embedding/: config.rs  mod.rs  provider.rs
agentmap-v2/src/export/: agent.rs  diagram.rs  document.rs  graphml.rs  json.rs  mod.rs  tabular.rs
agentmap-v2/src/extensions/: mod.rs
agentmap-v2/src/extensions/chunking/: config.rs  mod.rs  strategy.rs
agentmap-v2/src/extensions/enrichment/: mod.rs  pipeline.rs  provider.rs
agentmap-v2/src/extensions/incremental/: cache.rs  detector.rs  middleware.rs  mod.rs
agentmap-v2/src/extensions/linking/: chain.rs  middleware.rs  mod.rs  project.rs  scope.rs  strategies.rs  table.rs
agentmap-v2/src/integrations/: daemon.rs  dbkit.rs  mod.rs
agentmap-v2/src/middleware/: caching.rs  context.rs  dbkit.rs  logging.rs  metrics.rs  mod.rs  sidecar.rs  stack.rs
agentmap-v2/src/parser/: languages.rs  mod.rs  queries.rs  treesitter.rs
agentmap-v2/src/query/: matcher.rs  mod.rs  pattern.rs  search.rs
agentmap-v2/src/scanner/: hasher.rs  mod.rs  progress.rs  walker.rs
agentmap-v2/src/storage/: mod.rs  repository.rs  schema.rs  vector.rs
agentmap-v2/src/util/: frontmatter.rs  mod.rs
agentmap-v2/src/watcher/: handler.rs  mod.rs  types.rs
agentmap-v2/tests/: e2e_embedding_test.rs  e2e_generated_repo_test.rs  integration_test.rs
docs/: ENHANCED_RESOLVER_ROADMAP.md  NEW_CHANGES_INTEGRATION.md  OPTIMIZATION_DECISIONS.json  OPTIMIZATION_QUICK_REFERENCE.md  OPTIMIZATION_TRACKING.md  README.md  TECHNICAL_IMPLEMENTATION_LOG.md  enhanced_anchor_system.md  header.md  inlineVScentral.md  shift.md  testing.md
docs/design/: SYMBOL_RESOLUTION.md  V2_FEATURE_ALIGNMENT.md
docs/features/anchors/: API.md  CHANGELOG.md  DESIGN.md  DETACHED_ANCHOR_SYSTEM.md  IMPLEMENTATION_PLAN.md  TESTING.md  VERSION_CONTROL.md
docs/guides/: TESTING.md
docs/planning/: BACKLOG.md  ROADMAP.md
examples/dart/: flutter_sample.dart
examples/dart/pos/: AGENTS.md  CLAUDE.md  DATABASE_SCHEMA.md  DEPLOYMENT_GUIDE.md  analysis.txt  analysis_options.yaml  build_release.bat  build_simple.bat  checkout_implementation.md  create_portable.bat  create_portable.ps1  deploy.ps1  enhancements.md  error2.md  file_annotations_tracking.md  fixes.md  flutter_analyze_core_logging_after.txt  flutter_analyze_core_logging_after2.txt  flutter_analyze_output.txt  flutter_analyze_settings_after_fixes.txt  flutter_analyze_settings_after_fixes2.txt  flutter_analyze_settings_module.txt  flutter_analyze_settings_only.txt  flutter_analyze_settings_providers.txt  flutter_analyze_settings_providers_2.txt  flutter_analyze_settings_providers_3.txt  flutter_analyze_settings_ui.txt  flutter_log.txt  generate_appointments.sql  installer_script.iss  issues.json
examples/go/: sample.go
examples/java/: sample.java
examples/python/: sample.py
examples/rust/: sample.rs
examples/ts/: sample.ts
integrate/: AgentMap_vNext_Identity_Resolve_Graph.md
integrate/backup_DO_NOT_TOUCH/: AgentMap-Additional-Files-Edits.md
queries/: dart.scm  dart_uses.scm  java.scm  python.scm  typescript.scm
queries/python/: defs.scm
queries/rust/: imports.scm
queries/typescript/: defs.scm  imports.scm  uses.scm
src/: anchor.rs  architecture_exporter.rs  checker.rs  cli.rs  config.rs  export_formats.rs  frontmatter.rs  fs_scan.rs  generated_tests.rs  lib.rs  logging.rs  main.rs  query_pack.rs  scope_tracker.rs  sidecar.rs  symbol_resolver.rs  symbol_table.rs  watcher.rs  wildcard_matcher.rs
src/adapters/: enhanced_dart.rs  mod.rs  ts_adapter.rs
src/core/: analyzer.rs  language.rs  mod.rs  relationship_analyzer.rs  symbol_types.rs
src/index/: mod.rs
src/parsers/: dart_parser.rs  mod.rs  query_builder.rs  treesitter_engine.rs
tests/: relationship_analysis_test.rs  treesitter_integration_test.rs
tests/benchmarks/: mod.rs
tests/fixtures/small_project/: main.py
tests/integration/: cli_commands.rs  cli_tests.rs  mod.rs  multilang_analysis.rs  sidecar_generation.rs
tests/unit/: adapters.rs  config.rs  config_env_profile.rs  config_glob.rs  config_validation.rs  mod.rs  query_pack.rs  query_provider.rs  symbol_table.rs
tools/: gen_fixtures.rs
(+961 files in other folders)
