[package]
name = "agentmap"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
thiserror = "1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_yaml = "0.9.34"
serde_json = "1.0.142"
ignore = "0.4"
walkdir = "2"
rayon = "1.10"
sha2 = "0.10"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["fmt", "json", "env-filter", "time"] }
time = { version = "0.3", features = ["formatting", "macros"] }
regex = "1"
tree-sitter = "0.22"
tree-sitter-dart = { git = "https://github.com/UserNobody14/tree-sitter-dart" }
tree-sitter-python = "0.21"
tree-sitter-typescript = "0.21"
tree-sitter-javascript = "0.21"
tree-sitter-rust = "0.21"
tree-sitter-go = "0.21"
tree-sitter-java = "0.21"
# Modern UX and functionality
notify = "6.0"
# New architecture dependencies
num_cpus = "1.0"
indicatif = "0.17"
console = "0.15"
tokio = { version = "1.47", features = ["full"] }
futures = "0.3.31"
dashmap = "6.1"
glob = "0.3"
globset = "0.4"
flate2 = "1.0"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
lru = "0.12"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0"
tempfile = "3.8"


[[bin]]
name = "gen-fixtures"
path = "tools/gen_fixtures.rs"

