[package]
name = "agentmap"
version = "2.0.0"
edition = "2021"
description = "Multi-language code analysis for AI agents with RAG integration"
license = "MIT"
repository = "https://github.com/hotnsoursoup/agentmap"
keywords = ["code-analysis", "treesitter", "rag", "ai", "embeddings"]
categories = ["development-tools", "parsing"]

[features]
default = ["cli"]
cli = ["clap"]
db-kit = ["db-kit-lib", "tokio/rt-multi-thread"]
embedding = ["db-kit-lib", "tokio/rt-multi-thread"]
embedding-openai = ["embedding", "db-kit-lib/embedding-openai"]
embedding-ollama = ["embedding", "db-kit-lib/embedding-ollama"]
tracing = ["dep:tracing"]
all = ["cli", "tracing", "db-kit"]


[dependencies]
# Core parsing
tree-sitter = "0.22"
tree-sitter-rust = "0.21"
tree-sitter-python = "0.21"
tree-sitter-typescript = "0.21"
tree-sitter-javascript = "0.21"
tree-sitter-go = "0.21"
tree-sitter-java = "0.21"

# Dart uses different versioning
tree-sitter-dart = "0.0.4"

# Error handling
thiserror = "2"
anyhow = "1"

# Serialization (always needed for output)
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

# Optional dependencies
clap = { version = "4", features = ["derive"], optional = true }
db-kit-lib = { path = "../../../shared-libs/sqlite-pool/db-kit", package = "db-kit", features = ["sqlite", "agentmap"], optional = true }
tracing = { version = "0.1", optional = true }

# Utilities
sha2 = "0.10"
parking_lot = "0.12"
rusqlite = { version = "0.31", features = ["bundled"] }

# Directory scanning
rayon = "1.10"
ignore = "0.4"
indicatif = "0.17"
console = "0.15"

# Pattern matching
regex = "1.10"
lru = "0.12"
nucleo-matcher = "0.3"

# File watching
notify = "7"

# Compression for anchor system
flate2 = "1.0"
base64 = "0.22"

# Timestamps for architecture export
chrono = { version = "0.4", features = ["serde"] }



[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
tempfile = "3"
pretty_assertions = "1"

[dependencies.tokio]
version = "1"
features = ["rt-multi-thread", "macros"]
optional = true


[[bin]]
name = "agentmap"
path = "src/bin/agentmap.rs"
required-features = ["cli"]

[[example]]
name = "oauth_embedding_test"
required-features = ["embedding"]

[dependencies.dirs]
version = "5"

[dependencies.reqwest]
version = "0.12"
features = ["json"]

